added html and also css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal portfolio using html and css</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav class="navbar">
+        <a href="#" class="logo">MyPortfolio</a>
+        <ul>
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>  
+            <li ><a href="#">Portfolio</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <section class="home">
+        <div class="home-content">
+            <h1>Tamim Hossain</h1>
+            <h2>I'm a Web Developer</h2>
+            <p>A dedicated Web Developer with a strong foundation in HTML and CSS.
+Specializes in creating clean, responsive, and user-friendly web interfaces.
+Focuses on writing well-structured, maintainable, and efficient code.
+Continuously enhances skills by learning modern web development practices.
+Aims to contribute to impactful projects and grow as a professional developer.</p>
+<div class="btn-sci">
+    <a href="#" class="btn-sci">Download CV</a>
+    <a href="#" class="btn-sci">Twitter</a>
+    <a href="#" class="btn-sci">LinkedIn</a>
+</div>
+        
+    </section>       
     
+
 </body>
 </html>
